2002-06-12  Frank Warmerdam  <warmerdam@pobox.com>

	* Converted to use Description and metadata for driver information.
	Added mime, extension and options related driver metadata.

2002-06-11  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/aaigrid/aaigriddataset.cpp: Write support implemented
	for Arc/Info ASCII Grid Format.

2002-05-08  Andrey Kiselev  <dron@remotesensing.org>
	
	* /gdal/frmts/l1b/l1bdataset.cpp, GNUmakefile, makefile.vc: New driver
	(read only) for the NOAA Polar Orbiter Level 1b Dataset

2002-04-20  Andrey Kiselev  <dron@remotesensing.org>

	* /gdal/frmts/png/pngdataset.cpp: Added support for
	GDALWriteWolrldFile(). New option WORLDFILE=YES

2002-04-19  Frank Warmerdam  <warmerdam@pobox.com>

	* gdal/ogr/swq.{c,h}: Added support for [NOT] IN, [NOT] LIKE and IS 
	[NOT] NULL predicates in WHERE clauses.

	* gdal/frmts/vrt/vrtdataset.cpp: added CreateCopy() implementation.

===============================================================================
	
2002-04-16  Frank Warmerdam  <warmerdam@pobox.com>

	* Release GDAL 1.1.7.

	* gdal/ogr/ogrsf_frmts/shape/shape2ogr.cpp: ensure shapes are written
	with correct ring winding.

	* gdal/apps/{gdalinfo,gdal_translate}.c: Added --version support.

	* gdal/core/gdal_misc.cpp: Added GDALVersionInfo().

	* gdal/html/format_various.html: added XPM support.

2002-04-15  Frank Warmerdam  <warmerdam@pobox.com>

	* ogr/ogrsf_frmts/sdts/ogrsdtsdatasource.cpp: delete SDTSTransfer
	in destructor.

2002-04-12  Frank Warmerdam  <warmerdam@pobox.com>

	* gdal/frmts/xpm: added XPM read/write support.

2002-04-08  Frank Warmerdam  <warmerdam@pobox.com>

	* gdal/frmts/envisat/envisatdataset.cpp: Added hook for fetching
	dataset records using metadata api with alternative domains ... much
	like was done for ceos.

2002-04-03  Frank Warmerdam  <warmerdam@pobox.com>

	* gdal/frmts/ceos2/sar_ceosdataset.cpp: added special GetMetadata()
	access to raw record information for Ahmed.
