@@ -28,6 +28,10 @@
  ******************************************************************************
  *
  * $Log$
+ * Revision 1.12  2002/07/02 01:20:24  sperkins
+ * * frmts/fits/fitsdataset.cpp: Modified creation options for FITS
+ * driver and handling of "b-scaled" files. See docs for details.
+ *
  * Revision 1.11  2002/06/12 21:12:25  warmerda
  * update to metadata based driver info
  *
@@ -91,12 +95,26 @@ class FITSDataset : public GDALDataset {
   friend class FITSRasterBand;
   
   fitsfile* hFITS;
+
+  // The following two fields give the type as GDAL sees it. In
+  // certain circumstances, this may not correspond to the underlying
+  // FITS type given by BITPIX. For instance, a byte image file
+  // created using the BZERO and BSCALE creation options (and without
+  // the NOSCALE option), appears as a float image as far as GDAL is
+  // concerned, although it may have any underlying type (bytes, in
+  // this case). This is necessary because the cfitsio library
+  // performs automatic scaling of data whenever it is read or written
+  // from a file with BSCALE/BZERO set. Always using a float GDAL
+  // buffer avoids the scaled data producing overflow errors, usually
+  // problem when reading float data stored as scaled bytes.
+
   GDALDataType gdalDataType;   // GDAL code for the image type
   int fitsDataType;   // FITS code for the image type
+
   bool isExistingFile;
   long highestOffsetWritten;  // How much of image has been written
-  bool isBScaled;         // Is the file format floats stored as bytes
-  float bZero, bScale;   // Parameters for float<->byte conversion
+  bool isBScaled;      // Does this image use BSCALE/BZERO?
+
   FITSDataset();     // Others shouldn't call this constructor explicitly
 
   CPLErr Init(fitsfile* hFITS_, bool isExistingFile_);
@@ -402,28 +420,10 @@ CPLErr FITSDataset::Init(fitsfile* hFITS_, bool isExistingFile_) {
     return CE_Failure;
   }
 
-  // Determine if image is byte scaled
-  isBScaled = false;
-  fits_read_key_flt(hFITS, "BZERO", &bZero, 0, &status);
-  fits_read_key_flt(hFITS, "BSCALE", &bScale, 0, &status);
-  if (status)
-    // BZERO and BSCALE headers not present - reset status
-    status = 0;
-  else
-    isBScaled = true;
-  
   // Determine data type
-  if (isBScaled && bitpix == 8) {  // If we have a b-scaled image
-    if (isExistingFile) {          // treat it as float or double
-      gdalDataType = GDT_Float32;
-      fitsDataType = TFLOAT;
-    }
-    else {       // If the file was created, it could be either double or float
-      if (gdalDataType == GDT_Float64)
-	fitsDataType = TDOUBLE;
-      else
-	fitsDataType = TFLOAT;
-    }
+  if (isBScaled) { // B-Scaled images always look like float images
+    gdalDataType = GDT_Float32;
+    fitsDataType = TFLOAT;
   }
   else if (bitpix == BYTE_IMG) {
      gdalDataType = GDT_Byte;
@@ -565,6 +565,19 @@ GDALDataset* FITSDataset::Open(GDALOpenInfo* poOpenInfo) {
   dataset->eAccess = poOpenInfo->eAccess;
   dataset->poDriver = poFITSDriver;
 
+  // Check to see if the image contains BSCALE and BZERO. If so, we
+  // treat it as a float file, irrespective of the underlying type
+  float bZero = 0, bScale = 1;
+  dataset->isBScaled = false;
+  fits_read_key_flt(hFITS, "BZERO", &bZero, 0, &status);
+  fits_read_key_flt(hFITS, "BSCALE", &bScale, 0, &status);
+  if (status)
+    // BZERO and BSCALE headers not present - reset status
+    status = 0;
+  else
+    dataset->isBScaled = true;
+  
+  // Set up the description and initialize the dataset
   dataset->SetDescription(poOpenInfo->pszFilename);
   if (dataset->Init(hFITS, true) != CE_None) {
     delete dataset;
@@ -592,9 +605,10 @@ GDALDataset *FITSDataset::Create(const char* pszFilename,
   int status = 0;
 
   // Parse options - setting BSCALE and BZERO (both or neither must be set)
-  // causes a float format image to be stored in byte scaled form. As a result
-  // these options only make sense if eType is float or double.
-  bool haveBZero = false, haveBScale = false;
+  // causes BSCALE and BZERO keywords to be immediately set in the FITS file
+  // Data written to the file will automatically be rescaled using these 
+  // parameters, unless the NOSCALE=yes option is set.
+  bool haveBZero = false, haveBScale = false, noScale = false;
   float bZero, bScale;
   if (CSLFetchNameValue(papszParmList,"BZERO") != NULL) {
     haveBZero = true;
@@ -605,17 +619,14 @@ GDALDataset *FITSDataset::Create(const char* pszFilename,
     haveBScale = true;
     bScale = atof(CSLFetchNameValue(papszParmList,"BSCALE"));
   }
+  if (CSLFetchNameValue(papszParmList,"NOSCALE") != NULL)
+    noScale = true;
+
   if (haveBZero != haveBScale) {
     CPLError(CE_Failure, CPLE_AppDefined,
 	     "Either neither or both BSCALE and BZERO options must be "
 	     "specified when creating a FITS file");
     return NULL;
-  }
-  if (haveBScale && !(eType == GDT_Float32 || eType == GDT_Float64)) {
-    CPLError(CE_Warning, CPLE_AppDefined,
-	     "BSCALE and BZERO may only be used with float or double "
-	     "FITS images\nCreation options ignored");
-    haveBZero = haveBScale = false;
   }
 
   // Create the file - to force creation, we prepend the name with '!'
@@ -660,14 +671,26 @@ GDALDataset *FITSDataset::Create(const char* pszFilename,
     return NULL;
   }
 
+  dataset = new FITSDataset();
+  dataset->poDriver = poFITSDriver;;
+  dataset->nRasterXSize = nXSize;
+  dataset->nRasterYSize = nYSize;
+  dataset->eAccess = GA_Update;
+  dataset->SetDescription(pszFilename);
+
   // If bscaling is requested, add appropriate BSCALE and BZERO headers
-  // We also need to set BITPIX to 8
+  dataset->isBScaled = false;
   if (haveBScale) {
-    bitpix = 8;
     fits_movabs_hdu(hFITS, 1, 0, &status);
-    fits_update_key(hFITS, TINT, "BITPIX", &bitpix, 0, &status);
     fits_update_key(hFITS, TFLOAT, "BSCALE", &bScale, 0, &status);
     fits_update_key(hFITS, TFLOAT, "BZERO", &bZero, 0, &status);
+    
+    // If NOSCALE was specified, then disable scaling
+    if (noScale)
+      fits_set_bscale(hFITS, 1.0, 0.0, &status);
+    else
+      dataset->isBScaled = true;
+
     if (status) {
       CPLError(CE_Failure, CPLE_AppDefined,
 	       "Couldn't set BSCALE/BZERO headers in FITS file %s (%d)",
@@ -677,14 +700,6 @@ GDALDataset *FITSDataset::Create(const char* pszFilename,
     }
   }
   
-  dataset = new FITSDataset();
-  dataset->poDriver = poFITSDriver;;
-  dataset->nRasterXSize = nXSize;
-  dataset->nRasterYSize = nYSize;
-  dataset->eAccess = GA_Update;
-  dataset->SetDescription(pszFilename);
-  dataset->gdalDataType = eType;  // For b-scale we need to know intended type
-
   // Init recalculates a lot of stuff we already know, but...
   if (dataset->Init(hFITS, false) != CE_None) { 
     delete dataset;
